Sunday, December 21st, 2003   Ron Steinke <rsteinke@w-link.net>

	* wfmath/timestamp.h: Pull in winsock2.h instead of winsock.h
	  under win32.

Friday, December 19th, 2003   Al Riddoch <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.

Saturday, December 6th, 2003   Ron Steinke <rsteinke@w-link.net>

	* wfmath/polygon_intersect.cpp: Got rid of the only
	  new/delete calls in the whole library, as the
	  object in question could just as well be declared
	  on the stack.

Saturday, December 6th, 2003   Ron Steinke <rsteinke@w-link.net>

	* wfmath/timestamp.cpp: Added James' patch to make
	  valgrind happy.

Thursday, November 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Only one of the Point/Quaterion and Point/Matrix coordinate
	  transformation functions can or needs to have a default
	  rotation argument.

Thursday, November 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* The inverse of a Quaternion is q.inverse(), not -q.

Thursday, November 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Added local/parent coordinate transformation functions
	  and quaternion based 3D rotations to Point, still need to
	  add these to the rest of the shape classes.

Sunday, October 26th, 2003   Ron Steinke <rsteinke@w-link.net>

	* wfmath/quaternion.cpp, wfmath/atlasconv.h: Set validity
	  of vector component of Quaternion in three other places
	  we'd missed.
	* wfmath/rotmatrix*, wfmath/quaternion*: Added roundoff aging
	  code. As we do many floating point calculations, RotMatrix
	  and Quaternion will tend to drift from their respective
	  normalizations due to roundoff error. The new code adds
	  an m_age, which keeps track of how many computations ago
	  they were normalized, and automatically renomalizes them
	  after a given number of computations. Because we know that
	  they're still close to being normalized, the renormalization
	  code is linearized, so it's not too horrible as a speed hit.
