@@ -1,3 +1,8 @@
+Sunday, January 11th, 2004   Ron Steinke <rsteinke@w-link.net>
+
+	* wfmath/timestamp.h: Pull winsock #include outside of
+	  WFMath namespace.
+
 Sunday, December 21st, 2003   Ron Steinke <rsteinke@w-link.net>
 
 	* wfmath/timestamp.h: Pull in winsock2.h instead of winsock.h
